--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.2",
+    "dotenv": "^17.3.1",
     "groq-sdk": "^0.37.0",
     "next": "16.1.6",
     "react": "19.2.3",
