--- a/php/package.json
+++ b/php/package.json
@@ -15,6 +15,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "autoprefixer": "^10.4.24"
+        "autoprefixer": "^10.4.24",
+        "page-flip": "^2.0.7",
+        "turn.js": "^1.0.5"
     }
 }
